Date	Added

2007/04/24
	* Merged typo fixes to msg_athena.conf [ultramage]
2007/04/22
	* pc_max_status_def and mob_max_status_def (status.conf) are now capped to
	  100 for 100% (rather than 10000) [Skotlex]
2007/04/13
	* Added some Kiel Hyre quest related mapflags [Playtester]	
2007/04/12
	* Merged maps and mapflags [Playtester]
2007/04/11
	* Added hom_setting&0x40 to reset the re-use delay when vaporizing a
	  homunculus (homunc.conf)
	* Changed the default of "debuff_on_logout" to only remove negative buffs
	  (status.conf) [Skotlex]
2007/04/08
	* Set default vending tax to 2% [Playtester]
2007/04/05
	* Updates to login_athena.conf: date_format can be specified directly,
	  removed check_ip_flag, reorganized the names of the
	  dynamic_pass_failure_ban.
2007/04/02
	* Merged config setting "vending_tax" to specify a server tax on all
	  vending transactions (see items.conf for details)
2007/03/29
	* Set the default display_skill_fail setting to 2 (Disable skill-failed
	  messages due to can-act delays)
2007/03/27
	* Removed check_ip_flag from char_athena.conf as it's now always done.
	  [Skotlex]
2007/03/14
	* Removed socket config settings packet_len and mode_neg since these are
	  hardcoded now.
	* Updated the description of the enable_logs setting. Added support for
	  logging storage/guild storage transactions. [Skotlex]
2007/03/06
	* Added the two new packet versions to battle/client.conf [Zephiris]
2007/02/28
	* Removed the connection_ping_interval setting as it's now automatically handled
	  by the server.
2007/02/21
	* Collapsed config settings "sg_miracle_skill_min_duration" and
	  "sg_miracle_skill_max_duration" into "sg_miracle_skill_duration", which 
	  defaults to an hour (skill.conf).
2007/02/11
	* Merged removal of config settings produce_item_name_input,
	  produce_potion_name_input, making_arrow_name_input, holywater_name_input
	  and cdp_name_input. These are all handled now through bitmasks using
	  produce_item_name_input instead (items.conf).